<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AccountTypeActivity">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="53dp"
        android:fontFamily="@font/clementepdai_regular"
        android:text="@string/accountType"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/eventVendorButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:background="@drawable/account_button2"
        android:backgroundTint="@null"
        android:fontFamily="@font/zabal_semibold"
        android:gravity="left|center_vertical"
        android:text="@string/event_vendor"
        android:textSize="16sp"
        app:drawableStartCompat="@drawable/vendor_icon_xml"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/ClientButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="29dp"
        android:background="@drawable/account_button"
        android:fontFamily="@font/zabal_semibold"
        android:gravity="left|center_vertical"
        android:text="@string/client"
        android:textSize="16sp"
        app:drawableStartCompat="@drawable/client_icon_xml"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eventVendorButton" />
</androidx.constraintlayout.widget.ConstraintLayout>